# SophyCore

./: .gitmodules  App.example.toml  Cargo.toml  Makefile  build.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220527_113237_add_table_user.rs  m20220527_141344_add_table_guild.rs  m20220527_145541_add_table_xp.rs  models.rs
src/: config.rs  error.rs  logs.rs  main.rs  service.rs
src/cache/: mod.rs  user.rs  xp.rs
src/database/: mod.rs
src/database/entities/: guild.rs  mod.rs  prelude.rs  user.rs  xp.rs
src/database/functions/: guild.rs  mod.rs  user.rs  xp.rs
src/models/: xp.rs
src/services/: core.rs  mod.rs  xp.rs
src/tasks/: mod.rs  xp.rs
