[package]
name = "sophy-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.8.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
figment = { version = "0.10.6", features = ["toml", "env"] }
serde = { version = "1.0.137", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
chrono = "0.4.19"
migration = { path = "migration" }
async-trait = "0.1.53"
redis = { version = "0.21.5", features = ["tokio-comp"] }
deadpool-redis = "0.10.2"

[build-dependencies]
tonic-build = "0.7.2"

[features]
default = []
migrate = []
